Got wireframe checkbox working, fixed some minor layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -192,6 +192,11 @@ input[type="color"]::-webkit-color-swatch-wrapper {
   padding: 0%;
 }
 
+input[type="checkbox"] {
+  width: 30px;
+  height: 30px;
+}
+
 p {
   font-size: 20px;
   margin: auto;
